# MA_MachineLearning

./: .gitignore  LICENSE  README.md  browse.py  dataset.ipynb  evaluation.ipynb  import_bhlogs.py  pyproject.toml  save_dataset.py  train.ipynb  train.py
data/: .gitignore  README.md  b-human_predictions.dvc  evaluation.dvc  gamelogs.dvc  groundtruth.dvc  groundtruth_tfrecords.dvc  prelabeled.dvc  selected.dvc  tfrecords.dvc  unlabeled.dvc
logs/: fit.dvc
models/: .gitignore  checkpoints.dvc  evaluation.dvc  finished.dvc
notebooks/: dataset.ipynb  evaluation.ipynb  train.ipynb
scripts/: clean_models.py  import_bhlogs.sh  multi_cpn_metrics.sh  multi_thresholdless_metrics.sh  multi_training.sh  run_dataset_pipeline.sh  save_datasets.sh
settings/: all_categories_240x320_v1.yaml  all_categories_240x320_v2.yaml  all_categories_240x320_v3.yaml  all_categories_288x384_v1.yaml  all_categories_288x384_v2.yaml  all_categories_288x384_v3.yaml  all_categories_360x480_v1.yaml  all_categories_360x480_v2.yaml  all_categories_360x480_v3.yaml  all_categories_432x576_v1.yaml  all_categories_432x576_v2.yaml  all_categories_432x576_v3.yaml  all_categories_v1_240x320.yaml  all_categories_v1_256x320.yaml  all_categories_v3.yaml  all_categories_v5_432x576.yaml  all_categories_v5_480x640.yaml  config.yaml  config_default_light.yaml  config_inverted_residual_light.yaml  double_category.yaml  single_category.yaml
src/: browse.py  dataset_from_selection.py  evaluate.py  import_bhlogs.py  save_dataset.py  split_dataset.py  statistics.py  train.py
train/: layers.py  models.py
(+115 files in other folders)
